# janky

./: .gitignore  Cargo.toml
src/: cmd.rs  ctx.rs  gen.rs  main.rs  platform.rs  src.rs
src/cmd/: build.rs  check.rs  gen.rs  run.rs  show.rs  test.rs
src/platform/: android.rs  html5.rs  ios.rs  linux.rs  macos.rs  tvos.rs  watchos.rs  windows.rs
